<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.Home"
    tools:showIn="@layout/home">

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="93dp"
        android:layout_height="119dp"
        android:background="@color/colorFontOffWhite"
        android:drawableTop="@drawable/search_72"
        android:onClick="search"
        android:text="@string/searchBarbersLbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="93dp"
        android:layout_height="119dp"
        android:background="@color/colorFontOffWhite"
        android:drawableTop="@drawable/red_add_btn72"
        android:onClick="add"
        android:text="@string/addABarberLbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/favouritesBtn"
        android:layout_width="93dp"
        android:layout_height="116dp"
        android:background="@color/colorFontOffWhite"
        android:drawableTop="@drawable/favourites_72"
        android:onClick="favourites"
        android:text="@string/favouritesBarberLbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/addBarTV"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:background="@color/colorFontWhite"
        android:text="@string/recentlyViewedLbl"
        android:textAlignment="center"
        android:textColor="@color/colorFontBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBtn"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/emptyList"
        android:layout_width="266dp"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:text="@string/emptyMessageLbl"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="454dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBarTV"
        app:layout_constraintVertical_bias="1.0">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>